Add public VPN active keys endpoint
